# Sway-Bytecode-Root-Solver

./: README.md
bytecode_verifier_script/: Forc.toml
bytecode_verifier_script/src/: main.sw
configurable_swapper_contract/: Forc.toml
configurable_swapper_contract/src/: main.sw
tests/: Cargo.toml
tests/tests/: harness.rs
verifier_script/src/: main.sw
